Activate benchmarks from JMH core